--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "misskey",
-	"version": "12.111.1-nem-v04",
+	"version": "12.111.1-melt-v01",
 	"codename": "indigo",
 	"repository": {
 		"type": "git",
